# Wirutalny-Ekosystem

./: CMakeLists.txt  README.md  generatorlosowy.cpp  generatorlosowy.h  main.cpp  mieszkaniec.cpp  mieszkaniec.h  nisza.cpp  nisza.h  organizm.cpp  organizm.h  osobniki.cpp  osobniki.h  sasiedztwo.cpp  sasiedztwo.h  srodowisko.cpp  srodowisko.h  ustawienia.h  zlab03.cpp  zlab03.h  zlab06.cpp  zlab06.h  zlab09.cpp  zlab09.h  zlab10.cpp  zlab10.h  zlab12.cpp  zlab12.h
files/: symulacja.txt
